--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-flask==2.3.6
-pyTelegramBotAPI==4.12.0
-requests==2.32.0
-numpy==1.27.6
-pandas==2.2.1
-gunicorn==21.2.0
+flask>=2.3.0,<2.4
+requests
+telebot
+pandas
+numpy
