--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-flask>=2.3.0,<2.4
-requests
-telebot
-pandas
-numpy
-gunicorn
+Flask==2.2.5
+pyTelegramBotAPI==4.11.0
+gunicorn==20.1.0
+pandas==2.1.1
+numpy==1.26.0
