--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-Flask==2.2.5
-pyTelegramBotAPI==4.12.0
+pyTelegramBotAPI==4.15.4
+Flask==3.0.3
+gunicorn==20.1.0
+requests==2.31.0
+pandas==2.2.2
+numpy==1.26.4
