--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Flask==2.2.5
-pyTelegramBotAPI==4.12.0
-requests==2.32.0
+pyTelegramBotAPI==4.14.0
+Flask==2.3.2
 gunicorn==20.1.0
+requests==2.31.0
+numpy==1.26.5
+pandas==2.1.2
