--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 pyTelegramBotAPI==4.12.0
-pandas==2.0.3
+Flask==3.0.3
+pandas==2.2.2
 numpy==1.26.4
 ta==0.10.2
+python-binance==1.0.27
 requests==2.32.0
+
