--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 pyTelegramBotAPI==4.12.0
-Flask==3.0.3
-pandas==2.2.2
+pandas==2.1.0
 numpy==1.26.4
-ta==0.10.2
-python-binance==1.0.27
-requests==2.32.0
+requests==2.31.0
+flask==3.0.0
+python-dotenv==1.0.0
 
