--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ pyTelegramBotAPI==4.12.0
 pandas==2.1.0
 numpy==1.26.4
 requests==2.31.0
+ta==0.10.2
 flask==3.0.0
-python-dotenv==1.0.0
+python-binance==1.0.19
+
 
