--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
+Flask==2.3.3
 pyTelegramBotAPI==4.12.0
+python-binance==1.0.15
 pandas==2.1.0
-numpy==1.26.4
-requests==2.31.0
 ta==0.10.2
-flask==3.0.0
-python-binance==1.0.19
+requests==2.31.0
 
 
