--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,11 @@
-# Telegram
-pyTelegramBotAPI==4.12.0
-
-# Binance API
-python-binance==1.0.16
-
-# Data handling
-numpy==1.26.4
-pandas==2.1.0
-
-# Technical Analysis
-ta==0.10.2
-
-# Web server
 Flask==2.3.3
+pyTelegramBotAPI==4.12.0
+python-binance==1.0.16
+pandas==2.1.0
+numpy==1.26.4
+ta==0.10.2
+APScheduler==3.10.4
 gunicorn==20.1.0
-
-# Optional utilities
 requests==2.31.0
 
 
