--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,14 @@
 services:
   - type: web
-    name: solbot
+    name: ultra-signals-bot
     env: python
+    pythonVersion: "3.11.9"
     buildCommand: pip install -r requirements.txt
     startCommand: python index.py
+    envVars:
+      - key: TELEGRAM_TOKEN
+        value: "<YOUR_TELEGRAM_TOKEN>"
+      - key: BINANCE_API_KEY
+        value: "<YOUR_BINANCE_API_KEY>"
+      - key: BINANCE_API_SECRET
+        value: "<YOUR_BINANCE_API_SECRET>"
