--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,19 @@
+# Telegram bot
 pyTelegramBotAPI==4.12.0
+
+# Binance API
 python-binance==1.0.15
+
+# Data analysis
 pandas==2.1.1
+numpy==1.26.2
+
+# Technical analysis indicators
 ta==0.10.3
+
+# Flask (optional, if you want web hooks later)
+Flask==2.3.2
+
+# For running background async tasks (optional)
+aiohttp==3.9.3
+
