--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-pyTelegramBotAPI>=4.12.0
-python-binance>=1.0.15
-pandas>=2.0.3,<2.3
-ta>=0.10.3
+Flask==2.3.3
+pyTelegramBotAPI==4.12.0
+python-binance==1.0.15
+pandas==2.1.0
+ta==0.10.2
+numpy==1.25.2
+
 
 
 
