--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flask==3.0.3
-pyTelegramBotAPI==4.20.0
+Flask==2.3.2
+pyTelegramBotAPI==4.14.0
 python-binance==1.0.19
-pandas==2.2.2
+pandas==2.1.4
 numpy==1.26.4
-ta==0.11.0
+requests==2.31.0
 
 
 
