--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,6 @@
-Flask==2.3.2
-pyTelegramBotAPI==4.14.0
-python-binance==1.0.19
-pandas==2.1.4
-numpy==1.26.4
-requests==2.31.0
-
-
-
-
-
-
+Flask==2.3.4
+gunicorn==21.2.0
+pyTelegramBotAPI==4.11.0
+pandas==2.1.1
+numpy==1.26.2
+python-binance==1.0.16
